<resources>
    <string name="app_name">Video Space</string>
    <string name="most_popular_section_label_string">Most popular</string>
    <string name="film_thumbnail_string">Film thumbnail</string>
    <string name="main_app_label">Video Space</string>
    <string name="top_rated_section_label_string">Top Rated</string>
    <string name="default_movies_list_label">List:</string>
    <string name="more_information_bottom_sheet">More information</string>
    <string name="like_bottom_sheet">Like</string>
    <string name="add_to_watch_later_text">Add to watch later</string>
    <string name="remove_from_watch_later_text">Remove from watch later</string>
    <string name="movie_poster">movie_poster</string>
    <string name="user_score">User score:</string>
    <string name="lorem_ipsum">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velitur</string>
    <string name="number_of_votes">Number of votes:</string>
    <string name="add_movie_to_list">Add movie to list</string>
    <string name="status">Status</string>
    <string name="watching">Watching</string>
    <string name="completed">Completed</string>
    <string name="plan_to_watch">Plan to Watch</string>
    <string name="on_hold">On Hold</string>
    <string name="dropped">Dropped</string>
    <string name="score">Score</string>
    <string name="notes">Notes</string>
    <string name="most_popular_string">Most popular</string>
    <string name="release_date_string">Release date</string>
    <string name="average_score_string">Average score</string>
    <string name="vote_count_string">Vote count</string>
    <string name="home">Home</string>
    <string name="my_lists">My Lists</string>
    <string name="search">Search</string>
    <string name="search_fragment_headline">Select search options:</string>
    <string name="include_genres">Include genres</string>
    <string name="exclude_genres">Exclude genres</string>
    <string name="minimum_vote_count_string">Minimum vote count:</string>
    <string name="minimum_score_string">Minimum score:</string>
    <string name="list_of_movies_label">List of movies</string>
    <string name="add_movie_to_your_list">Add movie to your list</string>
    <string name="movie_rating_icon">Movie rating icon</string>
    <string name="poster_of_a_movie">Poster of a movie</string>
    <string name="genres_to_include_in_your_search">Genres to include in your search</string>
    <string name="score_picker_content_description">Pick minimum for movies</string>
    <string name="save_movie">Save movie</string>
    <string name="set_score_you_give_to_movie">Set score you give to movie</string>
    <string name="no_connection_icon">No connection icon</string>
    <string name="no_connection">No connection</string>
    <string name="login">Login</string>
</resources>