<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_nav_group">


        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/home" />

        <item
            android:id="@+id/user_lists"
            android:icon="@drawable/ic_baseline_list"
            android:title="@string/my_lists" />

        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_baseline_search"
            android:title="@string/search" />

    </group>
    <group
        android:id="@+id/login_group">

        <item android:id="@+id/login"
            android:icon="@drawable/ic_baseline_login"
            android:title="@string/login"/>

    </group>


</menu>