<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pl.patrykzygo.videospace.ui.movie_search.SearchMovieViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/search_movie_fragment_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/app_bar"
                    layout="@layout/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/search_fragment_headline"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:text="@string/search_fragment_headline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_bar" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/min_score_label"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:fontFamily="@font/averia_serif_libre"
                    android:text="@string/minimum_score_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_fragment_headline" />


                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/search_score_picker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:contentDescription="@string/score_picker_content_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/min_score_label"
                    app:np_max="10"
                    app:np_orientation="horizontal"
                    app:np_scrollerEnabled="true" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/min_vote_count_label"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:fontFamily="@font/averia_serif_libre"
                    android:text="@string/minimum_vote_count_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_score_picker" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/vote_count_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:hint="@string/minimum_vote_count_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/min_vote_count_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/vote_count_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/include_genres_label"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:fontFamily="@font/averia_serif_libre"
                    android:text="@string/include_genres"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vote_count_input_layout" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/include_genres_chip_group"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:contentDescription="@string/genres_to_include_in_your_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/include_genres_label"
                    tools:layout_height="100dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/exclude_genres_label"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:fontFamily="@font/averia_serif_libre"
                    android:text="@string/exclude_genres"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/include_genres_chip_group" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/exclude_genres_chip_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/exclude_genres_label"
                    tools:layout_height="100dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


        <com.google.android.material.bottomappbar.BottomAppBar
            style="@style/Widget.MaterialComponents.BottomAppBar.PrimarySurface"
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:elevation="0dp"
            app:fabAlignmentMode="end"
            app:hideOnScroll="true">


            <include
                android:id="@+id/bottom_nav_view_layout"
                layout="@layout/bottom_nav_view"
                android:layout_marginEnd="120dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/search_fragment_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:backgroundTint="@color/purple_200"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_baseline_search"
            app:layout_anchor="@id/bottom_app_bar"
            app:tint="@color/white" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>